[gd_scene load_steps=10 format=2]

[ext_resource path="res://Scenes/ui/main_menu/MainMenu.gd" type="Script" id=2]

[sub_resource type="DynamicFontData" id=1]
font_path = "res://Assets/font/RussoOne-Regular.ttf"

[sub_resource type="DynamicFont" id=2]
size = 24
extra_spacing_char = 3
font_data = SubResource( 1 )

[sub_resource type="DynamicFontData" id=3]
font_path = "res://Assets/font/ArizoneUnicaseRegular-5dRZ.ttf"

[sub_resource type="DynamicFont" id=4]
size = 32
extra_spacing_space = -9
font_data = SubResource( 3 )

[sub_resource type="DynamicFontData" id=5]
font_path = "res://Assets/font/RussoOne-Regular.ttf"

[sub_resource type="DynamicFont" id=6]
extra_spacing_char = 3
font_data = SubResource( 5 )

[sub_resource type="DynamicFontData" id=7]
font_path = "res://Assets/font/RussoOne-Regular.ttf"

[sub_resource type="DynamicFont" id=8]
size = 12
extra_spacing_char = 1
font_data = SubResource( 7 )

[node name="MainMenu" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 25
custom_constants/margin_top = 25
custom_constants/margin_left = 25
custom_constants/margin_bottom = 25
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBox" type="VBoxContainer" parent="."]
margin_left = 25.0
margin_top = 25.0
margin_right = 999.0
margin_bottom = 551.0

[node name="WelcomeLabel" type="Label" parent="VBox"]
margin_right = 974.0
margin_bottom = 30.0
custom_fonts/font = SubResource( 2 )
text = "Welcome "
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Center" type="CenterContainer" parent="VBox"]
margin_top = 34.0
margin_right = 974.0
margin_bottom = 526.0
size_flags_vertical = 3

[node name="VBox" type="VBoxContainer" parent="VBox/Center"]
margin_left = 101.0
margin_top = 157.0
margin_right = 872.0
margin_bottom = 334.0
custom_constants/separation = 33

[node name="GameTitle" type="Label" parent="VBox/Center/VBox"]
margin_right = 771.0
margin_bottom = 46.0
custom_fonts/font = SubResource( 4 )
text = "wasted in outta space"

[node name="Center" type="CenterContainer" parent="VBox/Center/VBox"]
margin_top = 79.0
margin_right = 771.0
margin_bottom = 177.0

[node name="VBox" type="VBoxContainer" parent="VBox/Center/VBox/Center"]
margin_left = 321.0
margin_right = 449.0
margin_bottom = 98.0
custom_constants/separation = 15

[node name="VBox" type="VBoxContainer" parent="VBox/Center/VBox/Center/VBox"]
margin_right = 128.0
margin_bottom = 61.0
custom_constants/separation = 9
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayButton" type="Button" parent="VBox/Center/VBox/Center/VBox/VBox"]
margin_left = 36.0
margin_right = 91.0
margin_bottom = 26.0
size_flags_horizontal = 4
size_flags_vertical = 4
custom_fonts/font = SubResource( 6 )
shortcut_in_tooltip = false
text = "play"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HighscoresButton" type="Button" parent="VBox/Center/VBox/Center/VBox/VBox"]
margin_top = 35.0
margin_right = 128.0
margin_bottom = 61.0
size_flags_horizontal = 4
size_flags_vertical = 4
custom_fonts/font = SubResource( 6 )
shortcut_in_tooltip = false
text = "highscores"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HowToButton" type="Button" parent="VBox/Center/VBox/Center/VBox"]
margin_left = 16.0
margin_top = 76.0
margin_right = 112.0
margin_bottom = 98.0
size_flags_horizontal = 4
size_flags_vertical = 4
custom_fonts/font = SubResource( 8 )
text = "how to play"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Popup" type="AcceptDialog" parent="VBox/Center"]
margin_left = 459.0
margin_top = 217.0
margin_right = 514.0
margin_bottom = 275.0
window_title = ""
[connection signal="pressed" from="VBox/Center/VBox/Center/VBox/VBox/PlayButton" to="." method="_on_PlayButton_pressed"]
[connection signal="pressed" from="VBox/Center/VBox/Center/VBox/VBox/HighscoresButton" to="." method="_on_HighscoresButton_pressed"]
[connection signal="pressed" from="VBox/Center/VBox/Center/VBox/HowToButton" to="." method="_on_HowToButton_pressed"]
